updated documentation. written majority of azure endpoint implementation

--- a/flan-t5-small-label-smooth-balanced/tokenizer_config.json
+++ b/flan-t5-small-label-smooth-balanced/tokenizer_config.json
@@ -932,9 +932,13 @@
   "eos_token": "</s>",
   "extra_ids": 100,
   "extra_special_tokens": {},
+  "max_length": 128,
   "model_max_length": 512,
   "pad_token": "<pad>",
   "sp_model_kwargs": {},
-  "tokenizer_class": "T5Tokenizer",
+  "stride": 0,
+  "tokenizer_class": "T5TokenizerFast",
+  "truncation_side": "right",
+  "truncation_strategy": "longest_first",
   "unk_token": "<unk>"
 }
