--- a/azure/conda.yaml
+++ b/azure/conda.yaml
@@ -7,7 +7,9 @@ dependencies:
     - pip
     - pip:
         - azureml-defaults
-        - transformers==4.35.0
+        - transformers==4.44.0
         - torch==2.1.0
         - inference-schema
         - sentencepiece
+        - protobuf
+        - tokenizers==0.19.1
